# cpp-brown-belt

./: .gitignore  CMakeLists.txt.template  LICENSE  create_project.sh  vimrc
booking/: CMakeLists.txt  booking.h  new_booking_providers.h  test.cpp
budget/: CMakeLists.txt  budget.cpp  budget_system.cpp  budget_system.h  budget_test.cpp  budget_test.h  date.cpp  date.h
budget_legacy/: CMakeLists.txt  budget_legacy.cpp
budget_mobile/: CMakeLists.txt  budget_mobile.cpp
cache/: CMakeLists.txt  Solution.cpp  cache.cpp
collide/: CMakeLists.txt  collide.cpp  geo2d.cpp
comment_server/: CMakeLists.txt  comment_server.cpp
concurrent_map_2/: CMakeLists.txt  concurrent_map_2.cpp
demographic_stats/: CMakeLists.txt  demographic_stats.cpp
demographic_stats_tests/: CMakeLists.txt  demographic_stats_tests.cpp
domains/: CMakeLists.txt  domains.cpp  domains.h  main.cpp  tests.cpp
domains_tests/: CMakeLists.txt  domains_tests.cpp
expression_tree/: CMakeLists.txt  Common.h  expression_tree.cpp
hash_person/: CMakeLists.txt  hash_person.cpp
hash_point/: CMakeLists.txt  hash_point.cpp
hash_set/: CMakeLists.txt  hash_set.cpp
lazy_value/: CMakeLists.txt  lazy_value.cpp
object_pool/: CMakeLists.txt  object_pool.cpp
pipeline/: CMakeLists.txt  pipeline.cpp
polynomial/: CMakeLists.txt  polynomial.cpp
print_stats_2/: CMakeLists.txt  print_stats_2.cpp
refactoring/: CMakeLists.txt  refactoring.cpp
secondary_index/: CMakeLists.txt  secondary_index.cpp
set_iterator_next/: CMakeLists.txt  set_iterator_next.cpp
spendings_ini/: CMakeLists.txt  ini.cpp  ini.h  spendings_ini.cpp
spendings_json/: CMakeLists.txt  json.cpp  spendings_json.cpp
spendings_xml/: CMakeLists.txt  spendings_xml.cpp  xml.cpp
stats_aggregator/: CMakeLists.txt  main.cpp  stats_aggregator.cpp  stats_aggregator.h  stats_aggregator_test.cpp
synchronized_2/: CMakeLists.txt  synchronized_2.cpp
team_tasks/: CMakeLists.txt  team_tasks.cpp
textures/: CMakeLists.txt  Common.h  Solution.cpp  main.cpp
transport_guide/: CMakeLists.txt  bus.cpp  bus.h  json_parser.cpp  json_parser.h  stop_manager.h  transport_guide.cpp  transport_manager.cpp  transport_manager.h  transport_manager_command.h
unique_ptr/: CMakeLists.txt  unique_ptr.cpp
utility/: profile.h  test_runner.h
zoo/: CMakeLists.txt  zoo.cpp
